@@ -27,6 +27,7 @@
 #include "Basics/Exceptions.h"
 #include "Basics/StaticStrings.h"
 #include "Basics/VelocyPackHelper.h"
+#include "Basics/ThreadLocalLeaser.h"
 #include "Basics/encoding.h"
 #include "Cluster/ClusterMethods.h"
 #include "RestServer/DatabaseFeature.h"
@@ -884,35 +885,18 @@ bool isValidEdgeAttribute(velocypack::Slice slice, bool allowExtendedNames) {
 }  // namespace helpers
 
 StringLeaser::StringLeaser(Context* transactionContext)
-    : _transactionContext(transactionContext),
-      _string(_transactionContext->leaseString()) {}
+    : _lease(ThreadLocalStringLeaser::lease()) {}
 
 StringLeaser::StringLeaser(Methods* trx)
     : StringLeaser{trx->transactionContextPtr()} {}
 
-StringLeaser::~StringLeaser() {
-  if (_string != nullptr) {
-    _transactionContext->returnString(_string);
-  }
-}
-
 BuilderLeaser::BuilderLeaser(Context* transactionContext)
-    : _transactionContext{transactionContext},
-      _builder{_transactionContext->leaseBuilder()} {
-  TRI_ASSERT(_builder != nullptr);
+    : _lease(ThreadLocalBuilderLeaser::lease()) {
+  TRI_ASSERT(_lease.get() != nullptr);
 }
 
 BuilderLeaser::BuilderLeaser(Methods* trx)
     : BuilderLeaser{trx->transactionContextPtr()} {}
-
-BuilderLeaser::~BuilderLeaser() { clear(); }
-
-void BuilderLeaser::clear() {
-  if (_builder != nullptr) {
-    _transactionContext->returnBuilder(_builder);
-    _builder = nullptr;
-  }
-}
 
 Result extractAttributeValues(
     std::vector<std::vector<basics::AttributeName>> const& storedValues,
